@@ -12,6 +12,7 @@ Changes in 22.17 (unreleased)
 	* fuser is not compiled on hurd-i386 Debian #673485
 	* No TEXTRELS in src/lists built as PIE on x86
 	* Fake pstree root for kernels with hidepid turned on
+	* More fixes for Cygwin SF Patch #3511920
 
 Changes in 22.16
 ================
